# rtc-digit-count

./: .gitignore  CMakeLists.txt  GenerateGraphs.py  LICENSE  Linux-Clang-digit-counting-uint32_t.md  Linux-Clang-digit-counting-uint64_t.md  Linux-GCC-digit-counting-uint32_t.md  Linux-GCC-digit-counting-uint64_t.md  README.md  ReadMe.md  Windows-MSVC-digit-counting-uint32_t.md  Windows-MSVC-digit-counting-uint64_t.md  macOS-Clang-digit-counting-uint32_t.md  macOS-Clang-digit-counting-uint64_t.md  macOS-GCC-digit-counting-uint32_t.md  macOS-GCC-digit-counting-uint64_t.md  rtc-digit-count.cpp
.github/workflows/: Benchmark.yml
csv/Linux-Clang/digit-counting-uint32_t/: Results.csv  uint32_t-integer_count[100000]-digit_length[0-10].csv  uint32_t-integer_count[10000]-digit_length[0-10].csv  uint32_t-integer_count[1000]-digit_length[0-10].csv  uint32_t-integer_count[100]-digit_length[0-10].csv  uint32_t-integer_count[10]-digit_length[0-10].csv  uint32_t-integer_count[1]-digit_length[0-10].csv
csv/Linux-Clang/digit-counting-uint64_t/: Results.csv  uint64_t-integer_count[100000]-digit_length[0-20].csv  uint64_t-integer_count[10000]-digit_length[0-20].csv  uint64_t-integer_count[1000]-digit_length[0-20].csv  uint64_t-integer_count[100]-digit_length[0-20].csv  uint64_t-integer_count[10]-digit_length[0-20].csv  uint64_t-integer_count[1]-digit_length[0-20].csv
csv/Linux-GCC/digit-counting-uint32_t/: Results.csv  uint32_t-integer_count[100000]-digit_length[0-10].csv  uint32_t-integer_count[10000]-digit_length[0-10].csv  uint32_t-integer_count[1000]-digit_length[0-10].csv  uint32_t-integer_count[100]-digit_length[0-10].csv  uint32_t-integer_count[10]-digit_length[0-10].csv  uint32_t-integer_count[1]-digit_length[0-10].csv
csv/Linux-GCC/digit-counting-uint64_t/: Results.csv  uint64_t-integer_count[100000]-digit_length[0-20].csv  uint64_t-integer_count[10000]-digit_length[0-20].csv  uint64_t-integer_count[1000]-digit_length[0-20].csv  uint64_t-integer_count[100]-digit_length[0-20].csv  uint64_t-integer_count[10]-digit_length[0-20].csv  uint64_t-integer_count[1]-digit_length[0-20].csv
csv/Windows-MSVC/digit-counting-uint32_t/: Results.csv  uint32_t-integer_count[100000]-digit_length[0-10].csv  uint32_t-integer_count[10000]-digit_length[0-10].csv  uint32_t-integer_count[1000]-digit_length[0-10].csv  uint32_t-integer_count[100]-digit_length[0-10].csv  uint32_t-integer_count[10]-digit_length[0-10].csv  uint32_t-integer_count[1]-digit_length[0-10].csv
csv/Windows-MSVC/digit-counting-uint64_t/: Results.csv  uint64_t-integer_count[100000]-digit_length[0-20].csv  uint64_t-integer_count[10000]-digit_length[0-20].csv  uint64_t-integer_count[1000]-digit_length[0-20].csv  uint64_t-integer_count[100]-digit_length[0-20].csv  uint64_t-integer_count[10]-digit_length[0-20].csv  uint64_t-integer_count[1]-digit_length[0-20].csv
csv/macOS-Clang/digit-counting-uint32_t/: Results.csv  uint32_t-integer_count[100000]-digit_length[0-10].csv  uint32_t-integer_count[10000]-digit_length[0-10].csv  uint32_t-integer_count[1000]-digit_length[0-10].csv  uint32_t-integer_count[100]-digit_length[0-10].csv  uint32_t-integer_count[10]-digit_length[0-10].csv  uint32_t-integer_count[1]-digit_length[0-10].csv
csv/macOS-Clang/digit-counting-uint64_t/: Results.csv  uint64_t-integer_count[100000]-digit_length[0-20].csv  uint64_t-integer_count[10000]-digit_length[0-20].csv  uint64_t-integer_count[1000]-digit_length[0-20].csv  uint64_t-integer_count[100]-digit_length[0-20].csv  uint64_t-integer_count[10]-digit_length[0-20].csv  uint64_t-integer_count[1]-digit_length[0-20].csv
csv/macOS-GCC/digit-counting-uint32_t/: Results.csv  uint32_t-integer_count[100000]-digit_length[0-10].csv  uint32_t-integer_count[10000]-digit_length[0-10].csv  uint32_t-integer_count[1000]-digit_length[0-10].csv  uint32_t-integer_count[100]-digit_length[0-10].csv  uint32_t-integer_count[10]-digit_length[0-10].csv  uint32_t-integer_count[1]-digit_length[0-10].csv
csv/macOS-GCC/digit-counting-uint64_t/: Results.csv  (+6 more)
(+59 files in other folders)
